fixed some layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+[ng-cloak] {
+    display: none;
+}
+
 body {
     padding: 15px;
 }
